--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "html-react-parser": "^5.2.6",
     "podcast": "^2.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "rss-parser": "^3.13.0",
+    "shikwasa": "^2.2.1",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
